--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
+    "modal": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "sass": "^1.49.7"
+    "react-slick": "^0.29.0",
+    "sass": "^1.49.7",
+    "slick-carousel": "^1.8.1"
   },
   "repository": {
     "type": "git",
